[gd_scene load_steps=8 format=2]

[ext_resource path="res://objects/LevelSelectNode.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/Inter-Medium-slnt=0.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/fonts/fa-solid-900.ttf" type="DynamicFontData" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.215686, 0.243137, 0.286275, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_size = 3
anti_aliasing = false

[sub_resource type="DynamicFont" id=2]
size = 30
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=3]
default_font = SubResource( 2 )
Button/colors/font_color = Color( 1, 1, 1, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_hover = Color( 0.807843, 0.807843, 0.807843, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/disabled = SubResource( 1 )
Button/styles/focus = SubResource( 1 )
Button/styles/hover = SubResource( 1 )
Button/styles/normal = SubResource( 1 )
Button/styles/pressed = SubResource( 1 )
PanelContainer/styles/panel = SubResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 25
use_filter = true
font_data = ExtResource( 3 )

[node name="LevelSelectNode" type="PanelContainer"]
margin_right = 700.0
margin_bottom = 60.0
rect_min_size = Vector2( 700, 60 )
theme = SubResource( 3 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 700.0
margin_bottom = 60.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer3" type="MarginContainer" parent="HBoxContainer"]
margin_right = 45.0
margin_bottom = 60.0
mouse_filter = 1
custom_constants/margin_left = 15

[node name="LevelIcon" type="Label" parent="HBoxContainer/MarginContainer3"]
margin_left = 15.0
margin_top = 17.0
margin_right = 45.0
margin_bottom = 43.0
rect_min_size = Vector2( 30, 0 )
mouse_filter = 1
custom_fonts/font = SubResource( 4 )
text = "ï€£"
align = 1
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
margin_left = 49.0
margin_right = 174.0
margin_bottom = 60.0
mouse_filter = 1
custom_constants/margin_right = 0
custom_constants/margin_left = 15

[node name="LevelNumberLabel" type="Label" parent="HBoxContainer/MarginContainer"]
margin_left = 15.0
margin_top = 11.0
margin_right = 125.0
margin_bottom = 49.0
rect_min_size = Vector2( 110, 0 )
mouse_filter = 1
text = "Level 1"

[node name="MarginContainer4" type="MarginContainer" parent="HBoxContainer"]
margin_left = 178.0
margin_right = 182.0
margin_bottom = 60.0
mouse_filter = 1
custom_constants/margin_top = 5
custom_constants/margin_bottom = 5

[node name="VSeparator" type="VSeparator" parent="HBoxContainer/MarginContainer4"]
margin_top = 5.0
margin_right = 4.0
margin_bottom = 55.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer"]
margin_left = 186.0
margin_right = 479.0
margin_bottom = 60.0
mouse_filter = 1
custom_constants/margin_right = 15
custom_constants/margin_left = 15

[node name="LevelNameLabel" type="Label" parent="HBoxContainer/MarginContainer2"]
margin_left = 15.0
margin_top = 11.0
margin_right = 278.0
margin_bottom = 49.0
mouse_filter = 1
text = "Back to the basics"
valign = 1

[node name="LevelPreviewTexture" type="TextureRect" parent="HBoxContainer"]
margin_left = 483.0
margin_right = 483.0
margin_bottom = 60.0

[node name="GreyOutRect" type="ColorRect" parent="."]
visible = false
margin_right = 700.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0, 0, 0, 0.2 )
[connection signal="gui_input" from="." to="." method="_on_LevelSelectNode_gui_input"]
